[gd_scene load_steps=14 format=2]

[ext_resource path="res://Visual/light_point_small.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SuperDuperUltraLaser.gd" type="Script" id=2]
[ext_resource path="res://Visual/particle_circle.png" type="Texture" id=3]
[ext_resource path="res://Visual/decor_bluree.png" type="Texture" id=4]
[ext_resource path="res://Visual/Menu/menu_circle.png" type="Texture" id=5]
[ext_resource path="res://Visual/April/BigLaser.png" type="Texture" id=6]
[ext_resource path="res://Visual/April/BigLaserCap.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2, 64 )

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.013245, 0.81457, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=2]
resource_name = "shrink"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "explode"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 4, 4 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "blast"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BigLaser:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BigLaser:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BigLaserCapStart:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BigLaserCapStart:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BigLaserCapEnd:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BigLaserCapEnd:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "calm"
tracks/0/type = "value"
tracks/0/path = NodePath("BigLaser:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BigLaser:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BigLaserCapStart:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BigLaserCapStart:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BigLaserCapEnd:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BigLaserCapEnd:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="SuperDuperUltraLaser" type="Node2D"]
script = ExtResource( 2 )

[node name="hitbox" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="coll" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 2, 0 )
shape = SubResource( 6 )

[node name="decor_bluree" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 272, -56 )
texture = ExtResource( 4 )

[node name="light" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.752941 )
texture = ExtResource( 1 )

[node name="center" type="Sprite" parent="light"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="particles" type="CPUParticles2D" parent="."]
emitting = false
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 96.0
gravity = Vector2( 0, 0 )
radial_accel = -66.66
scale_amount = 0.1
color_ramp = SubResource( 1 )

[node name="circle" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )

[node name="anim" type="AnimationPlayer" parent="circle"]
autoplay = "shrink"
anims/shrink = SubResource( 2 )

[node name="menu_circle" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 5 )

[node name="anim" type="AnimationPlayer" parent="menu_circle"]
anims/explode = SubResource( 3 )

[node name="BigLaser" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -7.62939e-06 )
scale = Vector2( 1e-05, 0.562 )
texture = ExtResource( 6 )
offset = Vector2( 2, 0 )

[node name="BigLaserCapStart" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -64, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="BigLaserCapEnd" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
offset = Vector2( 128, 0 )
flip_h = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/blast = SubResource( 4 )
anims/calm = SubResource( 5 )
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
